Modified: styles.css fixed the issue of repeating background image.

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 }
 body{
     background-image: url(images/bg.png);
+    background-size: 100% auto;
     font-family: Monserrat;
     color: white;
     margin: 40px;
